syntax = "proto3";

package myplay;

option go_package = "./pb";

import "packet.proto";
import "enum.gen.proto";

// 认证请求
message AuthReq {
  string    name       = 1; // 玩家账号
  string    email      = 2; // 邮箱
  string    phone      = 3; // 手机号
  string    password   = 4; // 密码
  Platform  platform   = 5; // 平台
  LoginType login_type = 6; // 登录类型
  string    ip         = 7; // ip地址
  string    device_id  = 8; // 设备id
  string    version    = 9; // 版本号
}

message AuthRsp {
  packet.RspHead head  = 1;
  uint64         uid   = 2; // 玩家uid
  string         url   = 3; // 游戏服url
  string         token = 4;
}