
/*
* 本代码由cfgtool工具生成，请勿手动修改
*/

syntax = "proto3";

package myplay;

option  go_package = "./pb";
	
message GlobalConfig {
	uint64 UidBeginValue = 1;	// uid开始值
	string GateUrl = 2;	// 游戏url地址
}

message GlobalConfigAry {
repeated GlobalConfig Ary = 1;
}

